@@ -1,4 +1,5 @@
 # QuanLyCovid19
 Chạy qua javafx plugin của maven: mvn clean javafx:run
 
-Chạy qua ide: Thêm VM option --add-exports javafx.base/com.sun.javafx.event=org.controlsfx.controls
+Chạy qua ide: Thêm VM option  --add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls
+                              --add-opens=javafx.graphics/javafx.scene=org.controlsfx.controls
